[gd_scene load_steps=3 format=3 uid="uid://yhjuxau1ofv1"]

[ext_resource type="Script" path="res://Scenes and scripts/UserInterface.gd" id="1_l6m42"]
[ext_resource type="Texture2D" uid="uid://l3cenlew45hv" path="res://Art/placeholder/cyan valuable.png" id="2_gdwhi"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6m42")

[node name="Shop" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Shop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.196078, 0, 1)

[node name="AdditionalTanks" type="Control" parent="Shop"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = -240.0
offset_right = 340.0
offset_bottom = -200.0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Shop/AdditionalTanks"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_gdwhi")

[node name="Label" type="Label" parent="Shop/AdditionalTanks"]
layout_mode = 0
offset_left = 150.0
offset_top = -75.0
offset_right = 950.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 30
text = "Additional tanks grants extra gas for longer diving sessions, at a cost of lesser mobility."
vertical_alignment = 1
autowrap_mode = 2

[node name="AdditionalTanksPurchase" type="Button" parent="Shop/AdditionalTanks"]
layout_mode = 0
offset_left = 1000.0
offset_top = -50.0
offset_right = 1400.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 50
text = "69$"

[node name="Rebreather" type="Control" parent="Shop"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 50.0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Shop/Rebreather"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_gdwhi")

[node name="Label" type="Label" parent="Shop/Rebreather"]
layout_mode = 0
offset_left = 150.0
offset_top = -75.0
offset_right = 950.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 30
text = "A rebreather recycles a diver's exhaled breath to be inhaled again, reducing the gas consumption rate."
vertical_alignment = 1
autowrap_mode = 2

[node name="RebreatherPurchase" type="Button" parent="Shop/Rebreather"]
layout_mode = 0
offset_left = 1000.0
offset_top = -50.0
offset_right = 1400.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 50
text = "69$"

[node name="HeatedSuit" type="Control" parent="Shop"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 300.0
offset_top = 260.0
offset_right = 340.0
offset_bottom = 300.0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Shop/HeatedSuit"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("2_gdwhi")

[node name="Label" type="Label" parent="Shop/HeatedSuit"]
layout_mode = 0
offset_left = 150.0
offset_top = -75.0
offset_right = 950.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 30
text = "Specially designed suit resists cold better, making a diver more resistant to hypothermia."
vertical_alignment = 1
autowrap_mode = 2

[node name="HeatedSuitPurchase" type="Button" parent="Shop/HeatedSuit"]
layout_mode = 0
offset_left = 1000.0
offset_top = -50.0
offset_right = 1400.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 50
text = "69$"

[node name="NextDayButton" type="Button" parent="Shop"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -225.0
offset_right = 300.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Next day"

[node name="Money" type="Label" parent="."]
layout_mode = 1
offset_left = 75.0
offset_top = 75.0
offset_right = 221.0
offset_bottom = 253.0
theme_override_font_sizes/font_size = 100
text = "0$"

[node name="Days" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -418.0
offset_top = 75.0
offset_right = -75.0
offset_bottom = 253.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 100
text = "Day 1"
horizontal_alignment = 2

[node name="GasBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = 250.0
offset_right = 275.0
offset_bottom = 750.0
grow_vertical = 2
rotation = 3.14159
color = Color(0, 0, 1, 1)

[node name="Fill" type="ColorRect" parent="GasBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 1)

[connection signal="pressed" from="Shop/AdditionalTanks/AdditionalTanksPurchase" to="." method="_on_additional_tanks_purchase_pressed"]
[connection signal="pressed" from="Shop/Rebreather/RebreatherPurchase" to="." method="_on_rebreather_purchase_pressed"]
[connection signal="pressed" from="Shop/HeatedSuit/HeatedSuitPurchase" to="." method="_on_heated_suit_purchase_pressed"]
[connection signal="pressed" from="Shop/NextDayButton" to="." method="_on_next_day_button_pressed"]
